@@ -1,0 +1,3 @@
+init:
+    jsl retry_time_up_init
+    rtl
